dataset1235/2025-2/610742602/users/1362015512/executions/677928262_4233865845.log
== SUBMISSION (2025-08-28 17:16:57)
-- CODE: 
c = float(input("Digite o valor do Celsius para a conversão em Fahrenheit"))

celsius = float(c)
fahrenheit = round((celsius * 9/5) + 32 , 2)

print(fahrenheit)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite o valor do Celsius para a conversão em Fahrenheit-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite o valor do Celsius para a conversão em Fahrenheit14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite o valor do Celsius para a conversão em Fahrenheit212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite o valor do Celsius para a conversão em Fahrenheit68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite o valor do Celsius para a conversão em Fahrenheit32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite o valor do Celsius para a conversão em Fahrenheit86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:16:07)
-- CODE: 
c = float(input("Digite o valor do Celsius para a conversão em Fahrenheit"))

celsius = float(c)
fahrenheit = round(celsius * 9/5) + 32 , 2)

print(fahrenheit)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:15:20)
-- CODE: 
c = float(input("Digite o valor do Celsius para a conversão em Fahrenheit"))

celsius = float(c)
fahrenheit = round(celsius * 9/5) + 32 , 2)

print(fahrenheit)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 4
    fahrenheit = round(celsius * 9/5) + 32 , 2)
                                              ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
